<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Commons -->
	<string name="menuPreferences">Preferences </string>
	<string name="menuAbout">About </string>
	<string name="menuHelp">Help </string>
	<string name="openMapsMenuItem">Search Theater </string>
	<string name="openMapsDriveMenuItem">Drive To Theater </string>
	<string name="openYoutubeMenuItem">Search Trailer</string>
	<string name="search">Search</string>
	<string name="cityName">City Name :</string>
	<string name="movieName">Movie Name :</string>
	<string name="btnChkLocation">By city name : </string>
	<string name="spinnerToday">Today</string>
	<string name="spinnerMonday">Monday</string>
	<string name="spinnerTuesday">Thuesday</string>
	<string name="spinnerWenesday">Wednesday</string>
	<string name="spinnerThursday">Thursday</string>
	<string name="spinnerFriday">Friday</string>
	<string name="spinnerSaturday">Saturday</string>
	<string name="spinnerSunday">Sunday</string>
	<string name="spinnerChoseTitle">Choose a day</string>
	<string name="menuSort">Sort results</string>
	<string name="sortDialogTitle">Choose sort to apply</string>
	<string name="msgNoCityName">City name is required</string>
	<string name="msgNoGps">No coordinate found... Please move or try again</string>
	<string name="msgNoMovieName">Movie name is required</string>
	<string name="msgNoPlaceMatch">No showtimes matched your query. Please select a different place.</string>
	<string name="msgNoDateMatch"> No showtimes were found. Please select a different date.</string>
	<string name="msgNoUpComming">Thoses information are not yet available. Please retry tomorow</string>
	<string name="msgNoDFav">You don\'t have any bookmark.</string>
	<string name="msgVersionTitle">CineShowTime version : </string>
	<string name="msgVersionCode">Code version : </string>
	<string name="msgVersionName">Name version : </string>
	<string name="msgTraductorName">Translate by : Jean-François Garreau</string>
	<string name="msgDonation">Want to make a donation, please visit my website : http://code.google.com/p/binomed-android-project/ </string>
	<string name="msgSpeecRecognition">Speech recognition : </string>
	<string name="msgSpeecCity">Speech recognition : name of city search</string>
	<string name="msgSpeecMovie">Speech recognition : name of movie search</string>
	<string name="msgCalculating">Calculating...</string>
	<string name="msgNoResultRetryLater">No showtimes where found for the moment, there maybe a problem on server. Please retry.</string>
	<string name="btnClose">Close</string>
	<!--  Widget -->
	<string name="widget_name_2x2">CineShowTime 2x2</string>
	<string name="widget_name_2x2_cupcake">CineShowTime 2x2 Cupcake</string>
	<string name="msgNoResults">No movie found</string>
	<string name="msgLoading">Loading...</string>
	<!--  Main acitivity -->
	<string name="MainTitle">Welcome on CineShowTime Application</string>
	<string name="app_name">CineShowTime</string>
	<string name="btnNear">Search theaters</string>
	<string name="btnMovie">Search movie </string>
	<string name="btnFav">Bookmarks</string>
	<string name="btnUpComming">Comming Soon</string>
	<!-- GPS Messages -->
	<string name="gpsInactiveTitle">GPS inactive ! </string>
	<string name="gpsInactiveMsg">Do you want to activate your gps ? </string>
	<string name="gpsInactiveBtnYes">Yes </string>
	<string name="gpsInactiveBtnNo">No </string>
	<!-- Near Activity Message -->
	<string name="hour">h</string>
	<string name="min">m</string>
	<string name="menuCall">Call Theater </string>
	<string name="menuFav">Bookmarks</string>
	<string name="menuLastShowtime">Last Showtimes</string>
	<string name="flagLastShowtime">last showtimes</string>
	<string name="addFav">Add to bookmarks</string>
	<string name="searchNearProgressTitle">Searching movies </string>
	<string name="searchNearProgressMsg">Loading... </string>
	<string name="itemMoreTheaters">More theaters</string>
	<!-- Search Movie Activity Message -->
	<string name="searchMovieProgressTitle">Searching show time </string>
	<string name="searchMovieProgressMsg">Loading... </string>
	<string name="txtMovieFind">Movie : </string>
	<string name="txtMovieFindDuration">Duration : </string>
	<string name="txtMovieFindValueNotFound">The film you requested is not available</string>
	<!-- Bookmarks Dialog Message -->
	<string name="dialogBookmarkTitle">Bookmarks</string>
	<string name="menuRemoveBookmark">Remove bookmark</string>
	<!-- Last Showtime Dialog Message -->
	<string name="dialogLastShowtimeTitle">Last Showtime</string>
	<string name="dialogLastShowtimeMsg">Will you start search of last showtimes for week ? \n This feature is aproximativ and could not always work.</string>
	<string name="dialogLastShowtimeBtnYes">Yes</string>
	<string name="dialogLastShowtimeBtnNon">No</string>
	<!-- Movie Activity Message -->
	<string name="movieProgressTitle">Searching movie informations </string>
	<string name="movieProgressMsg">Loading in progress ... </string>
	<string name="plot">Synopsis</string>
	<string name="projectionList">Show time for theater : </string>
	<string name="projectionTime">Projection hour : </string>
	<string name="endHour">Approximative end of movie : </string>
	<string name="txtTitle">Title : </string>
	<string name="txtRate">Rate : </string>
	<string name="txtUserRate">Your Rate : </string>
	<string name="txtDuration">Duration : </string>
	<string name="txtDirector">Director(s): </string>
	<string name="txtActor">Actor(s): </string>
	<string name="txtGenre">Genre : </string>
	<string name="tabSummary">Film Informations</string>
	<string name="tabProjection">Showtime list </string>
	<string name="tabReviews">Reviews</string>
	<string name="noSummary">No summary was found... </string>
	<string name="btnImdb">Imdb</string>
	<string name="menuTranslate">Translate </string>
	<string name="menuSms">Invite with sms</string>
	<string name="menuMail">Invite with mail</string>
	<string name="menuAddEvent">Add into Calendar</string>
	<string name="menuRate">Rate movie</string>
	<string name="msgRateSave">rate saved</string>
	<string name="smsContent">I invite you to see with me the movie "{0}" {1} at {2} in theater "{3}" \n\n sms auto-generated by CineShowTime</string>
	<string name="mailContent">I invite you to see with me the movie <i>"{0}"</i> {1} at <b>{2}</b> in theater "{3}" \n\n mail auto-generate by CineShowTime</string>
	<string name="mailSubject">Invitation for movie {0}</string>
	<string name="chooseIntentSms">Send sms invitation</string>
	<string name="chooseIntentMail">Send mail invitation</string>
	<string name="msgEventAdd">Show time add into calendar</string>
	<!-- Rate Movie Dialog Message -->
	<string name="dialogRateMovieTitle">Rate movie</string>
	<string name="dialogRateMovieMsg">Please give a rate between 0 and 10.</string>
	<string name="dialogRateMovieValidate">Validate</string>
	<string name="dialogRateMovieCancel">Cancel</string>
	<!-- Preferences Messages -->
	<string name="preference_lang_cat">Language preferences </string>
	<string name="preference_lang_key_auto_translate">check_preference</string>
	<string name="preference_lang_auto_translate">Auto translate </string>
	<string name="preference_lang_auto_translate_summary">Translate movies plots</string>
	<string name="preference_gen_cat">General preferences</string>
	<string name="preference_gen_key_auto_reload">auto_reload_preference</string>
	<string name="preference_gen_auto_reload">Auto reload</string>
	<string name="preference_gen_auto_reload_summary">Auto reload if date has change</string>
	<string name="preference_gen_key_time_adds">time_adds_preference</string>
	<string name="preference_gen_time_adds">Adds Time</string>
	<string name="preference_gen_time_adds_summary">Time between hour of showtime and start of movie (often adds and trailers)</string>
	<string name="preference_gen_default_time_adds">20</string>
	<string name="preference_loc_cat">Localisation preferences </string>
	<string name="preference_loc_key_measure">measure_preference</string>
	<string name="preference_loc_default_measure">KM</string>
	<string name="preference_loc_measure">Default unit</string>
	<string name="preference_loc_measure_summary">Chose your default unit measure</string>
	<string name="preference_loc_key_time_direction">time_direction_preference</string>
	<string name="preference_loc_time_direction">Direction time</string>
	<string name="preference_loc_time_direction_summary">Always take care of directions time in show of show times</string>
	<string name="preference_loc_key_enable_localisation">enable_localisation_preference</string>
	<string name="preference_loc_enable_localisation">Enabled localisation</string>
	<string name="preference_loc_enable_localisation_summary">Take care of GPS or network localisation if defined as active in device</string>
	<string name="preference_loc_key_localisation_provider">localisation_provider_preference</string>
	<string name="preference_loc_localisation_provider">Localisation mode</string>
	<string name="preference_loc_localisation_provider_summary">Choose your localisation mode : GPS, network, WIFI, IP or XPS(WIFI, network, GPS)</string>
	<string name="preference_loc_default_localisation_provider">GPS</string>
	<string name="preference_sort_cat">Sort preferences </string>
	<string name="preference_sort_key_sort_movie">sort_movie</string>
	<string name="preference_sort_default_sort_movie">THEATER_DISTANCE</string>
	<string name="preference_sort_sort_movie">Default movie sort</string>
	<string name="preference_sort_sort_movie_summary">Chose your default sort for movie search</string>
	<string name="preference_sort_key_sort_theater">sort_theater</string>
	<string name="preference_sort_default_sort_theater">THEATER_DISTANCE</string>
	<string name="preference_sort_sort_theater">Default theater sort</string>
	<string name="preference_sort_sort_theater_summary">Chose your default sort for theater search</string>
	<string name="preference_user_cat">User preference</string>
	<string name="preference_user_agenda">Choice of agenda</string>
	<string name="preference_user_agenda_summary">Choice of agenda to use for adding showtime</string>
	<!-- Error messages -->
	<string name="msgErrorNoDb">Connection to dabata could not be established, please check your sd card</string>
	<string name="msgErrorNoNetwork">Connection error, please check your network connection</string>
	<string name="msgErrorOnServer">The server encountered an error. Please retry later.</string>
</resources>
