<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011 Binomed (http://blog.binomed.fr)
 *
 * Licensed under the Eclipse Public License - v 1.0;
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.eclipse.org/legal/epl-v10.html
 *
 * THE ACCOMPANYING PROGRAM IS PROVIDED UNDER THE TERMS OF THIS ECLIPSE PUBLIC 
 * LICENSE ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THE PROGRAM 
 * CONSTITUTES RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT.
 */ 
 -->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_gen_cat">
        <ListPreference
                android:key="@string/preference_gen_key_time_format"
                android:title="@string/preference_gen_time_format" 
	    		android:entries="@array/time_format_values" 
	    		android:entryValues="@array/time_format_code"  
                android:defaultValue="@string/preference_gen_default_time_format"/>
	    <ListPreference 
	    		android:key="@string/preference_gen_key_time_adds"
	    		android:summary="@string/preference_gen_time_adds_summary" 
                android:title="@string/preference_gen_time_adds"
	    		android:entries="@array/time_adds" 
	    		android:entryValues="@array/time_adds_code"  
	    		android:defaultValue="@string/preference_gen_default_time_adds"/>
	    <ListPreference 
	    		android:key="@string/preference_gen_key_theme"
                android:title="@string/preference_gen_theme"
	    		android:entries="@array/themes_values" 
	    		android:entryValues="@array/themes_code"  
	    		android:defaultValue="@string/preference_gen_default_theme"/>
    </PreferenceCategory>
<!-- 
    <PreferenceCategory android:title="@string/preference_lang_cat">
        <CheckBoxPreference
                android:key="@string/preference_lang_key_auto_translate"
                android:summary="@string/preference_lang_auto_translate_summary" 
                android:title="@string/preference_lang_auto_translate" 
                android:defaultValue="false"/>
    </PreferenceCategory>
 -->
    <PreferenceCategory android:title="@string/preference_loc_cat">
	    <ListPreference 
	    		android:key="@string/preference_loc_key_measure"
	    		android:summary="@string/preference_loc_measure_summary" 
                android:title="@string/preference_loc_measure"
	    		android:entries="@array/measure" 
	    		android:entryValues="@array/measure_code" 
	    		android:defaultValue="@string/preference_loc_default_measure" />
        <CheckBoxPreference
                android:key="@string/preference_loc_key_time_direction"
                android:summary="@string/preference_loc_time_direction_summary" 
                android:title="@string/preference_loc_time_direction" 
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="@string/preference_loc_key_enable_localisation"
                android:summary="@string/preference_loc_enable_localisation_summary" 
                android:title="@string/preference_loc_enable_localisation" 
                android:defaultValue="true"/>
	    <ListPreference 
	    		android:key="@string/preference_loc_key_localisation_provider"
	    		android:summary="@string/preference_loc_localisation_provider_summary" 
                android:title="@string/preference_loc_localisation_provider"
	    		android:entries="@array/mode_localisation" 
	    		android:entryValues="@array/mode_localisation_code" 
	    		android:dependency="enable_localisation_preference" android:defaultValue="@string/preference_loc_default_localisation_provider"/>
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_sort_cat">
	    <ListPreference 
	    		android:key="@string/preference_sort_key_sort_theater"
	    		android:summary="@string/preference_sort_sort_theater_summary" 
                android:title="@string/preference_sort_sort_theater"
	    		android:entries="@array/sort_theaters_values" 
	    		android:entryValues="@array/sort_theaters_values_code" 
	    		android:defaultValue="@string/preference_sort_default_sort_theater" />
	</PreferenceCategory>
</PreferenceScreen>
