<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/relativeLayoutId"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   > 
	<ImageView android:layout_width="wrap_content" 
		android:layout_alignParentTop="true"  
		android:layout_centerHorizontal="true"  
		android:layout_height="wrap_content" 
		android:id="@+id/logoImg" />
	<Button android:text="@string/btnNear" 
		android:id="@+id/mainBtnSearchNear" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_marginBottom="5dip"  
		android:layout_below="@+id/logoImg" 
		style="@style/Button.button"
		/>
	<Button android:text="@string/btnMovie" 
		android:id="@+id/mainBtnSearchMovie" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_marginBottom="5dip"  
		android:layout_below="@+id/mainBtnSearchNear" 
		style="@style/Button.button"
		/>
	<Button android:text="@string/btnFav" 
		android:id="@+id/mainBtnTheaterFav" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/mainBtnSearchMovie" 
		style="@style/Button.button"
		/>
	<ImageView 
		android:id="@+id/logoSkyHook" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true" 
		android:layout_alignParentBottom="true" 
		android:background="@drawable/skyhookcolor_sm"/>
</RelativeLayout>