<?xml version="1.0" encoding="utf-8"?>
   		<RelativeLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    >
			    <ImageView 
					android:id="@+id/searchImgGps"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:layout_marginTop="10dip"  
					android:layout_alignParentRight="true"
					/>
				<TextView
					android:id="@+id/searchTxtCityName"
					android:layout_alignBottom="@+id/searchImgGps"
					android:layout_marginRight="10dip"  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"
				    android:text="@string/cityName"
				    style="?attr/cstSearchLabel"
				    />
			<com.binomed.showtime.android.layout.view.AutoCompleteTextWithSpeech 
			    android:id="@+id/searchCityName"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
				android:layout_marginTop="10dip"  
			    android:layout_below="@+id/searchImgGps" 
			    />
			<TextView
				android:id="@+id/searchTxtMovieName"
				android:layout_marginRight="10dip"    
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:text="@string/movieName"
			    android:layout_below="@+id/searchCityName" 
			    style="?attr/cstSearchLabel"
		    	/>
			<com.binomed.showtime.android.layout.view.AutoCompleteTextWithSpeech 
			    android:id="@+id/searchMovieName"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/searchTxtMovieName" 
			    />
			<TextView
				android:id="@+id/searchTxtSpinner"
				android:layout_marginRight="10dip"    
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:text="@string/spinnerChoseTitle"
			    android:layout_below="@+id/searchMovieName" 
			    style="?attr/cstSearchLabel"
		    	/>
		    <Spinner 
		        android:id="@+id/searchSpinner"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:drawSelectorOnTop="true"
		        android:prompt="@string/spinnerChoseTitle"
			    android:layout_below="@+id/searchTxtSpinner" 
				android:layout_marginTop="10dip"  
				android:layout_marginBottom="5dip"  
			    style="@style/Button.spinner"
		    />
			<Button 
				android:id="@+id/searchBtnSearch" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_marginTop="10dip"  
				android:text="@string/search" 
				android:layout_centerHorizontal="true"
			    android:layout_below="@id/searchSpinner" 
			    style="@style/Button.button"
				/>
		</RelativeLayout>
