<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView
		android:id="@+id/searchMovieTxtMovieName"
		android:layout_marginRight="10dip"    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:textStyle="bold"
	    android:text="@string/movieName"
    	/>
	<AutoCompleteTextView 
	    android:id="@+id/searchMovieMovieName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/searchMovieTxtMovieName" 
	    />
	<TextView
		android:id="@+id/searchMovieTxtCityName"
		android:layout_marginRight="10dip"    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_below="@id/searchMovieMovieName" 
	    android:textStyle="bold"
	    android:text="@string/cityName"
    	/>
     <ImageView 
		android:id="@+id/searchMovieImgGps"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
	    android:layout_below="@+id/searchMovieMovieName" 
    	android:layout_marginTop="10dip"  
    	android:layout_alignParentRight="true" 
		/>
    <CheckBox 
    	android:id="@+id/searchMovieLocation"
    	android:layout_marginLeft="10dip"  
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/searchMovieMovieName" 
	    android:layout_toLeftOf="@+id/searchMovieImgGps" 
	    />
	<AutoCompleteTextView 
	    android:id="@+id/searchMovieCityName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/searchMovieMovieName" 
	    android:layout_toRightOf="@+id/searchMovieTxtCityName" 
	    android:layout_toLeftOf="@+id/searchMovieLocation" 
	    />
    <Spinner 
        android:id="@+id/searchMovieSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:layout_marginBottom="5dip"  
        android:drawSelectorOnTop="true"
        android:prompt="@string/spinnerChoseTitle"
	    android:layout_below="@+id/searchMovieCityName"
	    style="@style/Button.spinner"
    />
	<Button 
		android:id="@+id/searchMovieBtnSearch"
		android:text="@string/search" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true" 
	    android:layout_below="@id/searchMovieSpinner"
	    style="@style/Button.button"
		/>
	<TextView
		android:id="@+id/searchMovieTxtMovieFind"
		android:gravity="center_vertical"  
		android:layout_marginRight="10dip"    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_below="@id/searchMovieBtnSearch" 
	    android:textStyle="bold"
    	/>
	<TextView
		android:id="@+id/searchMovieMovieFind"
		android:gravity="center_vertical"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_below="@id/searchMovieBtnSearch" 
	    android:layout_toRightOf="@id/searchMovieTxtMovieFind" 
	    android:textStyle="italic"
    	/>
	<TextView
		android:id="@+id/searchMovieTxtMovieFindDuration"
		android:gravity="center_vertical"  
		android:layout_marginRight="10dip"    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_below="@id/searchMovieMovieFind" 
	    android:textStyle="bold"
    	/>
	<TextView
		android:id="@+id/searchMovieMovieFindDuration"
		android:gravity="center_vertical"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_below="@id/searchMovieMovieFind" 
	    android:layout_toRightOf="@id/searchMovieTxtMovieFindDuration" 
	    android:textStyle="italic"
    	/>
	<ListView
       android:id="@+id/searchMovieListResult"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent" 
	   android:layout_below="@id/searchMovieMovieFindDuration" 
       />
</RelativeLayout>
