<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<!-- 	
    <ImageView 
		android:id="@+id/searchNearImgGps"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_marginRight="10dip"  
		android:layout_marginTop="10dip"  
		/>
	<CheckBox 
		android:id="@+id/searchNearLocation"
		android:layout_marginRight="10dip"  
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/btnChkLocation" 
	    android:layout_toRightOf="@+id/searchNearImgGps" 
	    />
	<AutoCompleteTextView 
	    android:id="@+id/searchNearCityName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/searchNearLocation" 
	    />
    -->
	<TextView
			android:id="@+id/searchNearTxtCityName"
			android:gravity="center_vertical"  
			android:layout_marginRight="10dip"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textStyle="bold" 
		    android:text="@string/cityName"
	    />
    <ImageView 
		android:id="@+id/searchNearImgGps"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dip"  
		android:layout_alignParentRight="true"
		/>
	<CheckBox 
		android:id="@+id/searchNearLocation"
		android:layout_marginLeft="10dip"  
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toLeftOf="@+id/searchNearImgGps" 
	    />
	<AutoCompleteTextView 
	    android:id="@+id/searchNearCityName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/searchNearTxtCityName" 
	    android:layout_toLeftOf="@+id/searchNearLocation" 
	    />
    <Spinner 
        android:id="@+id/searchNearSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/spinnerChoseTitle"
	    android:layout_below="@+id/searchNearCityName" 
	    android:background="@drawable/btn_spinner_and_showtime"
		android:layout_marginBottom="5dip"  
    />
	<Button 
		android:id="@+id/searchNearBtnSearch" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/search" 
		android:layout_centerHorizontal="true"
	    android:layout_below="@id/searchNearSpinner" 
	    android:background="@drawable/btn_and_showtime"
		/>
	<ExpandableListView
       android:id="@+id/searchNearListResult"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent" 
	    android:layout_below="@id/searchNearBtnSearch" 
       />
</RelativeLayout>
