<?xml version="1.0" encoding="utf-8"?>
<greendroid.widget.ActionBarHost
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@id/gd_action_bar_host"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	style="?attr/imgBackground" 
	android:orientation="vertical">

	<greendroid.widget.ActionBar
		android:id="@id/gd_action_bar"
		android:layout_height="@dimen/gd_action_bar_height"
		android:layout_width="fill_parent"
		android:background="?attr/gdActionBarBackground" />
	<FrameLayout
		android:id="@id/gd_action_bar_content_view"
		android:layout_height="0dp"
		android:layout_width="fill_parent"
		android:layout_weight="1">
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    >
			<RelativeLayout
				android:id="@+id/searchHeader"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_marginBottom="10dip"
		    	android:background="@drawable/header"
		    	>
		    	 <ImageView 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:layout_centerHorizontal="true" 
					android:background="@drawable/logo_header"
					/>
		    </RelativeLayout>
		    <RelativeLayout
				android:id="@+id/searchWidgetLayoutCity"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/searchHeader"
			    >
				<TextView
					android:id="@+id/searchWidgetTxtCityName"
					android:layout_centerVertical="true"  
					android:layout_marginRight="10dip"  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"
				    android:text="@string/cityName"
				    style="?attr/cstSearchLabel"
				    />
			    <ImageView 
					android:id="@+id/searchWidgetImgGps"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:layout_marginTop="10dip"  
					android:layout_alignParentRight="true"
					/>
			</RelativeLayout>
			 <AutoCompleteTextView 
			    android:id="@+id/searchWidgetCityName"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/searchWidgetLayoutCity" 
				android:layout_marginTop="10dip"  
			    android:singleLine="true" 
		    	style="?attr/cstEditText"
			    />	
			<Button 
				android:id="@+id/searchWidgetBtnSearch" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/search" 
				android:layout_centerHorizontal="true"
			    android:layout_below="@id/searchWidgetCityName" 
			    style="@style/Button.button"
				/>
			<RelativeLayout
				 android:layout_width="fill_parent"
			   	 android:layout_height="wrap_content"
				 android:layout_below="@+id/searchWidgetBtnSearch" 
				android:layout_marginTop="10dip"  
				>
				<LinearLayout
					android:id="@+id/searchWidgetLayoutTextFav"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"  
					android:layout_marginRight="10dip"  
				   	android:background="@drawable/back_fav_acceuil_top"
				>
					<TextView
						android:id="@+id/searchWidgetTextFav"
						android:layout_width="fill_parent"
					   	android:layout_height="wrap_content"
						android:text="@string/btnFav"
						android:gravity="center_horizontal"
						style="@style/Text.FavMain"
					/>
				</LinearLayout>
				<ListView
					android:id="@+id/searchWidgetFavList" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:layout_below="@+id/searchWidgetLayoutTextFav" 
					android:layout_marginLeft="10dip"  
					android:layout_marginRight="10dip"  
				   	android:background="@drawable/back_fav_acceuil_bottom"
					/>
			</RelativeLayout>
		</RelativeLayout>
	</FrameLayout>
</greendroid.widget.ActionBarHost>